--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon .src/main.js",
+    "dev": "nodemon ./src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/td5823/t-annal-service#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "koa": "^2.13.4",
+    "koa-router": "^12.0.0",
     "nodemon": "^2.0.20"
   }
 }
