--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "koa": "^2.13.4",
+    "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
-    "nodemon": "^2.0.20"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.26.0"
   }
 }
